syntax = "proto3";
package coolcinema.new.rpc;
option go_package = "coolcinema/new/rpc";

service NewService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string email = 2;
  bool is_active = 3;
}
